--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.10.0",
     "jest": "^24.9.0"
   }
 }
